fix ui bugs: entering code and meanding at add mapping screen, add button for modal editing, fix ui elemetns strangely off center. Reacotr code and start putting DropDown in own component

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -53,8 +53,8 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  margin: 0;
+  /* box-sizing: border-box;
+  margin: 0; */
   font-weight: normal;
 }
 
